Successful build of 3.2